fixed max width on mobile

--- a/responsive.css
+++ b/responsive.css
@@ -169,7 +169,7 @@
 
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 390px) {
     .navbottom {width: 375px;}
     .video { 
         width: 100%;
